added google map api

--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
-      <h3>My Google Maps Demo</h3>
+    <!-- <aside class="bg-dark"> -->
+      <!-- <h3>My Google Maps Demo</h3> -->
       <div id="map"></div>
-    </aside>
+    <!-- </aside> -->
 
     <section id="contact">
         <div class="container">
@@ -282,7 +282,7 @@
     <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
     <!-- Theme JavaScript -->
-    <script src="js/creative.min.js"></script>
+    <script src="js/creative.js"></script>
 
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARY5E9_ztMOUCa8gL66pM40S1ktpmivwg&callback=initMap">
