--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Matthew Atkins</a>
+                <a class="navbar-brand page-scroll" href="#page-top">MA</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -73,9 +73,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1 id="homeHeader">Full Stack Web Developer | Creative </h1>
+                <h1 id="homeHeader">MATTHEW ATKINS </h1>
                 <hr>
-                <p>Atlanta | GA</p>
+                <p>FULL STACK WEB DEVELOPER | ATLANTA, GA</p>
                 <!-- <a href="#about" class="btn btn-primary btn-xl page-scroll">Find Out More</a> -->
             </div>
         </div>
@@ -89,7 +89,7 @@
                     <h2 class="section-heading">ABOUT</h2>
                     <hr class="light">
                     <p class="text-faded"> What's up! I'm Matthew. Proud graduate of THE Florida Agricultural and Mechanical University, I am lover of all things creative and whole. At the turn of 2017, I ditched a promising Business Development career to pursue my passion for tech and design.  Wanting to make my next move my best move, I enrolled in an Immersive Full Stack Web Development course at General Assembly Atlanta. In the course I have experienced a myriad of highs and lows, but through it all of i have enjoyed the ride and look forward to more brain meltdowns.</p>
-                    <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a>
+                    <!-- <a href="#services" class="page-scroll btn btn-default btn-xl sr-button">Get Started!</a> -->
                 </div>
             </div>
         </div>
@@ -140,6 +140,8 @@
 
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
+          <!-- <h2 class="section-heading">Portfolio</h2>
+          <hr class="light"> -->
             <!-- <div class="row no-gutter popup-gallery"> -->
                 <div class="col-md-6">
                   <a href="http://jeopardy.bitballoon.com/" target="_blank"><img src="img/jeopardymockup.png" alt="Jeopardy" width="400px"></a>
@@ -261,7 +263,7 @@
                 </div>
                 <div class="col-lg-4 col-lg-offset-2 text-center">
                     <i class="fa fa-phone fa-3x sr-contact"></i>
-                    <p>123-456-6789</p>
+                    <p>+1 813-784-6214</p>
                 </div>
                 <div class="col-lg-4 text-center">
                     <i class="fa fa-envelope-o fa-3x sr-contact"></i>
